# kalmanorix

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  README.md  ROADMAP.md  analyze_centroids.py  generate_api.py  index.html  inspect_test_queries.py  metrics_spec.md  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  robustness_appendix.tex  robustness_failure_modes.md  robustness_summary.json  routing_vs_fusion.tex  routing_vs_fusion_decomposition.json  sitemap.xml  subsystem_contribution_summary.md
.claude/: settings.local.json
api/: index.html
arxiv_submission_readiness/: index.html
crosspaper_consistency_report/: index.html
css/: extra.css
docs/: api.md  arxiv_submission_readiness.md  crosspaper_consistency_report.md  generate_api.py  index.md  joss_checklist.md  publication_claim_matrix.md  security.md  style_guide.md
examples/: create_interactive_demo.py  fastapi_server.py  huggingface_alignment_demo.py  huggingface_embedder_demo.py  interactive_demo.ipynb  minimal_fusion_demo.py  procrustes_alignment_demo.py  quickstart_cpu.py  statistical_appendix_example.md  test_server_import.py  tfidf_routing_demo.py
experiments/: .pylintrc  __init__.py  benchmark_efficiency.py  benchmark_fusion_methods.py  benchmark_shared_embedding_path.py  bootstrap_next_phase_scaffold.py  check_query_domains.py  compare_canonical_rankings.py  compare_fusion_strategies.py  config.py  create_configs.py  diagnose_centroid.py  eval_monolith.py  evaluate_milestone_2_1.py  evaluate_per_domain.py  generate_test_set.py  mixed_domain_eval.py  profile_hotspots.py  run_adaptive_fusion_selection.py  run_adaptive_route_or_fuse.py  run_baseline_comparison.py  run_canonical_benchmark.py  run_correlation_aware_fusion.py  run_embedding_regime_comparison.py  run_fusion_baseline_suite.py  run_hostile_benchmark.py  run_kalman_assumption_stress_test.py  run_kalman_error_analysis.py  run_kalman_latency_optimization.py  run_kalman_learned_correction.py  run_kalman_prior_ablation.py  run_matched_compute_benchmark.py  run_milestone_2_1.py  run_milestone_2_2.py  run_real_mixed_benchmark.py  run_uncertainty_ablation.py  run_uncertainty_calibration.py  specialists_vs_monolith.py  train_charge.py  train_monolith.py  (+7 more)
joss_checklist/: index.html
js/: extra.js
milestones/: index.html
paper/: paper.bib  paper.md
publication/: index.html
publication_bundle/: README.md
publication_claim_matrix/: index.html
results/: README.md  claim_gate.json  debug_cooking.json  debug_cooking2.json  efficiency_analysis.md  efficiency_benchmark.json  efficiency_cooking_query.json  efficiency_cooking_threshold0.7.json  efficiency_full.json  efficiency_mixed_topk.json  efficiency_semantic.json  efficiency_semantic_analysis.md  efficiency_semantic_routing.json  efficiency_top_k.json  evidence_registry.json  example_calibration_report.md  milestone_1_3_kalman_vs_mean.csv  milestone_1_3_mixed_domain_dataset.json  semantic_routing_efficiency_report.md  test_cooking.json  test_cooking2.json  test_cooking3.json  test_scaling.json  test_semantic.json  test_semantic2.json  test_semantic3.json
scripts/: audit_paper_claims.py  audit_publication_claims.py  build_all_papers.py  build_claim_gate.py  build_evidence_registry.py  build_failure_analysis_report.py  build_kalman_evidence_dashboard.py  build_mixed_benchmark.py  build_publication_bundle.py  calibrate_sef.py  check_crosspaper_consistency.py  check_no_hardcoded_results.py  check_packaging_metadata.py  check_publication_consistency.py  dev_setup.sh  eval_from_artefacts.py  export_paper_tables.py  export_publication_tables.py  generate_routing_fusion_decomposition.py  run_real_mixed_benchmark.py  validate_publication_claims.py
search/: search_index.json
security/: index.html
style_guide/: index.html
tests/: conftest.py  test_adaptive_fusion_selection.py  test_adaptive_route_or_fuse.py  test_calibration.py  test_canonical_benchmark_utils.py  test_centroid_sigma2.py  test_core_api_refactor.py  test_correlation_aware_benchmark.py  test_correlation_aware_fuser.py  test_covariance.py  test_demo_output.py  test_documented_imports.py  test_domain_centroid.py  test_invariants.py  (+40 more)
(+392 files in other folders)
