[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalmanorix"
version = "0.2.0"
description = "Experimental specialist-embedding fusion and routing toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "cachetools>=5.3", "scipy>=1.11"]

[project.optional-dependencies]
benchmark = [
    "datasets==2.19.0",
    "ir-datasets==0.5.9",
    "pyarrow==15.0.2",
]
dev = ["pytest>=8.0", "pylint>=3.0", "ruff>=0.6", "black>=24.0", "mypy>=1.8", "pre-commit>=3.6", "types-PyYAML>=6.0", "types-cachetools>=4.2", "pytest-benchmark>=4.0", "pytest-mock>=3.10", "build>=1.2"]
viz = ["matplotlib>=3.7"]
train = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "datasets>=2.14",
    "transformers>=4.36",
    "accelerate>=0.25",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "scikit-learn>=1.3"
]
cloud = [
    "openai>=1.0",
    "cohere>=5.0",
    "anthropic>=0.25",
    "google-cloud-aiplatform>=1.50"
]
api = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.5",
    "slowapi>=0.1.8",
    "cachetools>=5.3"
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6"
]
onnx = [
    "onnxruntime>=1.15",
    "onnx>=1.14",
]

[tool.pytest.ini_options]
markers = [
    "benchmark: performance benchmarks (excluded from regular CI)",
    "e2e: end-to-end tests",
]

[tool.setuptools]
package-dir = {"" = "src", "experiments" = "experiments"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["kalmanorix*", "experiments*"]

[project.scripts]
kalmanorix-build-mixed-benchmark = "kalmanorix.benchmarks.mixed_domain:main"
kalmanorix-run-benchmark = "experiments.registry.runner:main"
kalmanorix-generate-report = "experiments.registry.reporting_runner:main"
kalmanorix-run-canonical-benchmark = "experiments.run_canonical_benchmark:main"
kalmanorix-eval-routing = "kalmanorix.benchmarks.routing_evaluation:main"
kalmanorix-run-correlation-aware-fusion = "kalmanorix.benchmarks.cli:correlation_aware_fusion_main"
kalmanorix-run-uncertainty-calibration = "kalmanorix.benchmarks.cli:uncertainty_calibration_main"
